--- a/index.html
+++ b/index.html
@@ -14,29 +14,28 @@
     <h1 class="font-bold text-3xl mb-8">Registration Form</h1>
 
     <form class="bg-white p-8 rounded shadow-md w-96 mx-auto" id="registrationForm">
-
-      <div class="mb-4 flex items-center">
-        <label for="name" class="w-1/3 block pr-4 font-bold text-right">Name</label>
-        <input type="text" id="name" placeholder="Enter your name" class="w-2/3 px-3 py-2 border rounded bg-gray-300" required>
+      <div class="mb-4 flex flex-col">
+        <label for="name" class="font-bold mb-2">Name:</label>
+        <input type="text" id="name" placeholder="Enter your name" class="px-3 py-2 border rounded bg-gray-300" required>
       </div>
 
-      <div class="mb-4 flex items-center">
-        <label for="email" class="w-1/3 block pr-4 font-bold text-right">Email</label>
-        <input type="email" id="email" placeholder="Enter your email" class="w-2/3 px-3 py-2 border rounded bg-gray-300" required>
+      <div class="mb-4 flex flex-col">
+        <label for="email" class="font-bold mb-2">Email:</label>
+        <input type="email" id="email" placeholder="Enter your email" class="px-3 py-2 border rounded bg-gray-300" required>
       </div>
 
-      <div class="mb-4 flex items-center">
-        <label for="password" class="w-1/3 block pr-4 font-bold text-right">Password</label>
-        <input type="password" id="password" placeholder="Enter your password" class="w-2/3 px-3 py-2 border rounded bg-gray-300" required>
+      <div class="mb-4 flex flex-col">
+        <label for="password" class="font-bold mb-2">Password:</label>
+        <input type="password" id="password" placeholder="Enter your password" class="px-3 py-2 border rounded bg-gray-300" required>
       </div>
 
-      <div class="mb-4 flex items-center">
-        <label for="dob" class="w-1/3 block pr-4 font-bold text-right">Date of Birth </label>
-        <input type="date" id="dob" class="w-2/3 px-3 py-2 border rounded bg-gray-300" required>
+      <div class="mb-4 flex flex-col">
+        <label for="dob" class="font-bold mb-2">Date of Birth (between 18 and 55 years old):</label>
+        <input type="date" id="dob" class="px-3 py-2 border rounded bg-gray-300" required>
       </div>
 
       <div class="mb-4">
-        <label>
+        <label class="font-bold">
           <input type="checkbox" id="terms" required>
           I accept the terms and conditions
         </label>
@@ -46,20 +45,25 @@
     </form>
 
     <div id="entriesTableContainer" class="mt-8 text-center">
-        <h2 class="font-bold text-2xl mb-4">Entries</h2>
-        <table id="entriesTable" class="w-full border-collapse">
-          <thead>
-            <tr>
-              <th class="p-4 border bg-white-500 text-black font-bold black">Name</th>
-              <th class="p-4 border bg-white-500 text-black font-bold w-1/5">Email</th>
-              <th class="p-4 border bg-white-500 text-black font-bold w-1/5">Password</th>
-              <th class="p-4 border bg-white-500 text-black font-bold w-1/5">Dob</th>
-              <th class="p-4 border bg-white-500 text-black font-bold w-1/5">Accepted terms?</th>
-            </tr>
-          </thead>
-        </table>
+      <h2 class="font-bold text-2xl mb-4">Entries</h2>
+      <table id="entriesTable" class="w-full border-collapse">
+        <thead>
+          <tr>
+            <th class="p-4 border bg-green-500 text-white font-bold w-1/6">Name</th>
+            <th class="p-4 border bg-green-500 text-white font-bold w-1/6">Email</th>
+            <th class="p-4 border bg-green-500 text-white font-bold w-1/6">Password</th>
+            <th class="p-4 border bg-green-500 text-white font-bold w-1/6">Dob</th>
+            <th class="p-4 border bg-green-500 text-white font-bold w-1/6">accepted terms?</th>
+          </tr>
+        </thead>
+        <tbody>
+  
+        </tbody>
+      </table>
     </div>
+  </div>
 
   <script src="index.js"></script>
 </body>
+
 </html>
